Buggy Build for aq-community-home.html

--- a/src/components/community/aq-community-home-searchbar.html
+++ b/src/components/community/aq-community-home-searchbar.html
@@ -10,104 +10,6 @@
 
     <style>
 
-        /*#searchbox {*/
-            /*height: 46px;*/
-            /*line-height: 46px;*/
-
-            /*border: 0;*/
-            /*margin: 0;*/
-            /*padding-left: 10px;*/
-            /*border: 1px solid #e5e5e5;*/
-            /*@apply(--paper-font-body1);*/
-            /*font-size: 100%;*/
-
-            /*width: 600px;*/
-            /*padding-right: 10px;*/
-        /*}*/
-
-        /*#searchbox:focus {*/
-            /*outline: none;*/
-            /*background-color: white;*/
-        /*}*/
-
-        /*paper-button {*/
-            /*display: block;*/
-            /*margin: 0px;*/
-            /*height: 46px;*/
-            /*background: white;*/
-            /*border: 1px solid #e5e5e5;*/
-            /*border-radius: 0px;*/
-            /*width: 150px;*/
-        /*}*/
-
-        /*paper-menu {*/
-            /*cursor: pointer;*/
-            /*width: 150px;*/
-        /*}*/
-
-        /*#button {*/
-            /*height: 0;*/
-            /*margin: 0;*/
-            /*padding: 0px;*/
-        /*}*/
-
-        /*paper-button #content {*/
-            /*position: absolute;*/
-            /*top: -2px;*/
-        /*}*/
-
-        /*iron-icon {*/
-            /*position: absolute;*/
-            /*top: 10px;*/
-            /*left: 100%;*/
-        /*}*/
-
-        /*#category {*/
-            /*width: 50px;*/
-        /*}*/
-
-        /*#category_dd {*/
-            /*---button-width: 170px;*/
-            /*--dropdown-width: 240px;*/
-            /*--dropdown-border: 1px solid #e5e5e5;*/
-            /*--dropdown-height: 46px;*/
-            /*--dropdown-font-size: 15px;*/
-            /*--dropdown-paper-menu-font-size: 16px;*/
-            /*--dropdown-background-color: #99ced4;*/
-        /*}*/
-
-        /*.iconButton {*/
-            /*outline: 1px solid teal;*/
-            /*padding: 5px;*/
-            /*width: 35px;*/
-            /*height: 35px;*/
-            /*margin-right: 10px;*/
-            /*color: #cc6666;;*/
-            /*margin-bottom: 40px;*/
-        /*}*/
-
-        /*.iconButton:active {*/
-            /*padding: 8px;*/
-        /*}*/
-
-        /*paper-radio-button {*/
-            /*--paper-radio-button-size: 12px;*/
-            /*font-size: 13px;*/
-            /*--paper-radio-button-checked-color: teal;*/
-        /*}*/
-
-        /*#searchdiv {*/
-            /*display: none;*/
-        /*}*/
-
-        /*paper-tooltip.iconTooltip {*/
-            /*--paper-tooltip: {*/
-                /*font-size: 13px;*/
-                /*min-width: 40px;*/
-                /*text-align: center;*/
-            /*} --paper-tooltip-opacity: 1.0;*/
-            /*--paper-tooltip-background: teal;*/
-        /*}*/
         #searchbox, #searchbox1 {
             height: 32px;
             -webkit-appearance: none;
@@ -262,9 +164,9 @@
                     });
                 }
 
-                if (this.searchValue == "") {
-                    this.toggle();
-                }
+//                if (this.searchValue == "") {
+//                    this.toggle();
+//                }
 
                 this.lastSearchValue = this.searchValue;
                 this.lastSelectedCategory = this.selectedCategory;
